Added enum gender to petstore

--- a/examples/petstore-expanded/petstore-expanded.yaml
+++ b/examples/petstore-expanded/petstore-expanded.yaml
@@ -142,6 +142,9 @@ components:
           type: string
         tag:
           type: string
+        gender:
+          type: string
+          enum: [ male, female ]
 
     Error:
       required:
